# searxng-access

./: .dockerignore  .gitignore  AGENTS.md  Containerfile  Makefile  README.md  compose.example.yaml  compose.example.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: container.yml
container/: settings.template.yml
dev/: limiter.toml  settings.yml
examples/caddy/: Caddyfile  compose.yaml
src/searxng_access/: __init__.py  auth.py  cli.py  plugin.py  policy.py  store.py
tests/: smoke_container.sh
tests/integration/: test_container.py  test_plugin.py
tests/unit/: test_auth.py  test_policy.py  test_store.py
